--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./assets/img/banner/banner1.jpg" alt="banner 1" class="img-fluid slide-img"> 
             <img src="./assets/img/banner/banner3.jpg" alt="banner 3" class="img-fluid slide-img">
         </div>
-        <div class="position-absolute top-50 start-50">
+        <div class="position-absolute centerbutton">
             <a href="./layout/product.html" class="btn btn-outline-light rounded-0 fs-5 d-flex align-items-center justify-content-center effect-theloai rounded-1 fw-bold" style="width:150px;height: 50px;">
                 Shop Now
             </a>
