--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>sagkuto</title>
     <link rel="icon" type="./Images/png" href="./assets/img/logo_favicon/favicon.png">
     <link rel="stylesheet" href="./assets/css/slide.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/fonts/font.css">
 </head>
 <body>
@@ -203,7 +205,47 @@
 
 </div>
 
+<footer class="section-p1">
+    <div class="col">
+        <img src="./assets/img/logo_favicon/logo.png" alt="logo-SAGKUTO">
+    </div>
 
+    <div class="col">
+        <h3>Về chúng tôi</h3>
+        <a href="#">Shop tại HCM</a>
+        <a href="#">Giới thiệu</a>
+        <a href="#">Cơ hội việc làm</a>
+        <a href="#">Liên hệ</a>
+        <a href="#">Blog</a>
+    </div>
+
+    <div class="col">
+        <h3>Bạn nên biết</h3>
+        <a href="#">Hướng dẫn mua hàng</a>
+        <a href="#">Thanh toán, Giao nhận</a>
+        <a href="#">Bảo mật thông tin</a>
+        <a href="#">Quy định đổi trả hàng</a>
+        <a href="#">Hướng dẫn chọn size</a>
+    </div>
+
+    <div class="col">
+        <h3>Cần hỗ trợ</h3>
+        <a href="#">Showroom: số 273 An Dương Vương, Phường 2, Quận 5, Thành phố Hồ Chí Minh</a>
+        <a href="#"><i class="fa-solid fa-phone"></i>HOTLINE: 0968 999 999</a>
+        <div class="icon">
+            <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.tiktok.com/"><i class="fa-brands fa-tiktok"></i></a>
+        </div>
+    </div>
+
+    <div class="copyright">
+        <p>Copyright © SAGKUTO</p>
+    </div>
+</footer>
 
 
 
