--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </div>
 
     <div class="col">
-        <h3>Về chúng tôi</h3>
+        <h3 class="fs-3">Về chúng tôi</h3>
         <a href="#">Shop tại HCM</a>
         <a href="#">Giới thiệu</a>
         <a href="#">Cơ hội việc làm</a>
@@ -220,7 +220,7 @@
     </div>
 
     <div class="col">
-        <h3>Bạn nên biết</h3>
+        <h3 class="fs-3">Bạn nên biết</h3>
         <a href="#">Hướng dẫn mua hàng</a>
         <a href="#">Thanh toán, Giao nhận</a>
         <a href="#">Bảo mật thông tin</a>
@@ -229,7 +229,7 @@
     </div>
 
     <div class="col">
-        <h3>Cần hỗ trợ</h3>
+        <h3 class="fs-3">Cần hỗ trợ</h3>
         <a href="#">Showroom: số 273 An Dương Vương, Phường 2, Quận 5, Thành phố Hồ Chí Minh</a>
         <a href="#"><i class="fa-solid fa-phone"></i>HOTLINE: 0968 999 999</a>
         <div class="icon">
